Optimize for Render free tier: use PORT env var, reduce DPI to 200, add workers config

--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -17,5 +17,8 @@ COPY . /app
 # Python csomagok telepítése
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Alapértelmezett indítás
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Port környezeti változó beállítása (Render használja)
+ENV PORT=8000
+
+# Alapértelmezett indítás - használja a PORT környezeti változót
+CMD uvicorn main:app --host 0.0.0.0 --port $PORT --workers 1 --timeout-keep-alive 120
