Update DPI configuration for memory optimization

--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,5 +1,4 @@
 
-
 FROM python:3.11-slim
 
 # Telepítsd a Tesseract OCR-t, Poppler-t és nyelvi csomagokat
@@ -20,5 +19,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Port környezeti változó beállítása (Render használja)
 ENV PORT=8000
 
-# Alapértelmezett indítás - használja a PORT környezeti változót
-CMD uvicorn main:app --host 0.0.0.0 --port $PORT --workers 1 --timeout-keep-alive 120
+# Alapértelmezett indítás - használja a PORT környezeti változót, hosszabb timeout Render free tier-hez
+CMD uvicorn main:app --host 0.0.0.0 --port $PORT --workers 1 --timeout-keep-alive 300
