--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,7 +1,7 @@
 # AI Provider API Keys
 GEMINI_API_KEY=your_gemini_api_key_here
 
-# Default AI Provider (gemini, openai, or claude)
+# Default AI Provider
 AI_PROVIDER=gemini
 
 # Server Configuration
